# lwk-dart-sequentia

macos/Classes/: frb_generated.h
rust/: Cargo.toml
rust/src/: frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs
rust/src/api/: descriptor.rs  types.rs  wallet.rs
