[package]
name = "lwk_dart"
description = "Flutter-Rust Bridge for Liquid Wallet Kit (lwk)"
authors = ["i5hi <ishi@satoshiportal.com>, mocodesmo <morteza@satoshiportal.com>"]
version = "0.1.5"
edition = "2021"

[lib]
name = "lwk_dart"
doctest = false
crate-type = ["staticlib", "cdylib"]

[dependencies]
lwk_wollet = { version = "0.5.1" }
lwk_signer = { version = "0.5.1" }
lwk_common = {version = "0.5.2" }
thiserror = "1.0.50"
elements = "0.24.0"
flutter_rust_bridge = "=2.0.0-dev.31"
anyhow = "1.0.68"
lazy_static = "1.4.0"
hex = "0.4"

[build-dependencies]
flutter_rust_bridge_codegen = { version = "=2.0.0-dev.31" }

[build]
profiler = true

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

# Use Sequentia fork of rust-elements
[patch.crates-io]
elements = { git = "https://github.com/SequentiaSEQ/rust-sequentia", rev = "c824a874aba0d1d298e2ce5da33a787893a320dc" }
elements-miniscript = { git = "https://github.com/SequentiaSEQ/sequentia-miniscript", rev = "5a24391c59b3935a3d562d817c80614cceda5adf" }
lwk_common = { git = "https://github.com/SequentiaSEQ/lwk-sequentia", rev = "3e482e4ae10c796419b876169f4775f7d4c2f8a2" }
lwk_jade = { git = "https://github.com/SequentiaSEQ/lwk-sequentia", rev = "3e482e4ae10c796419b876169f4775f7d4c2f8a2" }
lwk_signer = { git = "https://github.com/SequentiaSEQ/lwk-sequentia", rev = "3e482e4ae10c796419b876169f4775f7d4c2f8a2" }
lwk_wollet = { git = "https://github.com/SequentiaSEQ/lwk-sequentia", rev = "3e482e4ae10c796419b876169f4775f7d4c2f8a2" }